tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/int_as_constraint/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic_errors/typecheck/int_as_constraint/int_as_constraint.essence:3:11:
  |
3 | such that x
  |           ^
Type error:
	Expected: "Bool or [Bool]"
	Got: int

tests/roundtrip/invalid/semantic_errors/typecheck/int_as_constraint/int_as_constraint.essence:4:11:
  |
4 | such that y
  |           ^
Type error:
	Expected: "Bool or [Bool]"
	Got: int

